fix: dark mode and modal

--- a/app/components/modules/About/about.module.scss
+++ b/app/components/modules/About/about.module.scss
@@ -1,4 +1,4 @@
-@import '../../../styles//index.scss';
+@import "../../../styles//index.scss";
 
 .about {
   position: relative;
@@ -74,7 +74,7 @@
   }
 
   &:after {
-    content: '';
+    content: "";
     position: absolute;
     width: 100%;
     height: 50%;
@@ -258,9 +258,13 @@
 
 .modal-outer {
   width: 90%;
-  max-height: 600px;
+  max-height: 400px;
   overflow-y: auto;
   padding: 1rem;
+
+  @include custom-min-media($desktop) {
+    max-height: 500px;
+  }
 
   &::-webkit-scrollbar {
     width: 4px;
